- MA: incorrect arguments passed to 'acumulus_line_collect_after' event handlers.
- MA: Mail components were swapped in 2.4.8; our mail did no longer work on 2.4.8.

Refactorings:
- ALL: Clearer error message when API call 'lookups/lookup_vatinfo' returns an error.
- MA: Updated event handling in siel_acumulus_ma2 module.
- ALL: refactored test utilities


8.6.5 (2025-10-21) (PS|HS|VM)
-----------------------------
Features:
- PS|JOO: Updated the acumulus_customise_invoice module to this version of the module and
  base library.
- PS: Added support for Mollie payment fees on the Acumulus invoice status tab.

Bugs:
- ALL: Completors should complete, not overwrite, values already set.
- JOO|WP: CMS version not mentioned in <connector> tag in messages to the Acumulus API.
- JOO: Mails were not sent as HTML mails but as text mails with HTML tags.
- JOO: Joomla does not accept parameters named 'result' in their event handling system.
- PS: TypeError: LineCollector::addVatRateLookupMetadata(): Argument #2 ($addressId) must
  be of type int, string given, called in ItemLineCollector.php on line 90 and ...

Refactorings:
- ALL: Generalise class totals towards a class Amount (split into part amount and part
  VAT) allowing to retrieve its separate parts and which parts were calculated.
- ALL: BasicSubmit: removed needContract as a parameter and introduced it as a parameter
  during collecting, so we do not collect contract data (and store it in the BasicSubmit
  object) if we do not need it. Also added a complete phase, even if for now it is
  handled by the (newly introduced) NoopCompletor.
- PS: extracted payment fee handling into a separate class that adds support for 3rd
  party modules.


8.6.4 (2025-10-15) (PS)
-----------------------
Features:
- PS: Added support for Mollie payment fees.


8.6.3 (2025-10-14) (OC)
-----------------------
Bugs:
- OC3: Our own autoLoader is still needed.